# Implicit-Conversion-Hazard-Analyzer

./: .gitignore  CMakeLists.txt  DESIGN.md  EVALUATION.md  IMPLEMENTATION.md  README.md  html_reporter.py  icha_cli.py
benchmarking/: README.md
benchmarking/config/: projects.json
benchmarking/src/: __init__.py  benchmark_engine.py  cve_database.py  demo.py  models.py  parsers.py  report_generator.py  run_benchmark.py
examples/: CMakeLists.txt  context_engine_demo.cpp  icha_integration_demo.cpp  impact_graph_demo.cpp  risk_engine_demo.cpp
include/context/: ContextClassification.hpp  ContextIntelligenceEngine.hpp  ContextRecord.hpp  EnhancedContextIntelligenceEngine.hpp
include/discovery/: ConversionClassifier.hpp  ConversionDiscoveryEngine.hpp
include/domain/conversion/: ConversionRecord.hpp
include/fusion/: Finding.hpp  FindingSerializer.hpp  FusionEngine.hpp
include/impact/: ConversionImpactGraph.hpp  GraphNode.hpp  ImpactPath.hpp
include/parsing/: ImplicitCastEvent.hpp  ParsingOptions.hpp  ParsingService.hpp
include/reporting/: ReportingEngine.hpp
include/risk/: RiskEngine.hpp  RiskFactors.hpp  RiskJsonFormatter.hpp  RiskScores.hpp
scripts/: build.sh  run.sh  run_validation_tests.sh  test_risk_differentiation.sh
src/: CMakeLists.txt  ICHAAction.hpp  main.cpp
src/context/: CMakeLists.txt  ContextIntelligenceEngine.cpp  EnhancedContextIntelligenceEngine.cpp
src/discovery/: CMakeLists.txt  ConversionClassifier.cpp  ConversionDiscoveryEngine.cpp
src/fusion/: CMakeLists.txt  FindingSerializer.cpp  FusionEngine.cpp
src/impact/: CMakeLists.txt  ConversionImpactGraph.cpp
src/parsing/: CMakeLists.txt  ParsingServiceImpl.cpp  ParsingServiceImpl.hpp
src/parsing/detail/: ImplicitCastVisitor.cpp  ImplicitCastVisitor.hpp
src/reporting/: CMakeLists.txt  ReportingEngine.cpp
src/risk/: CMakeLists.txt  RiskEngine.cpp  RiskJsonFormatter.cpp
testcases/: QUICK_GUIDE.md  README.md  VALIDATION_RESULTS.md  api_context.c  assignment_context.c  branch_context.c  loop_context.c  memory_context.c  return_context.c  test_api_context.cpp  test_loop_context.cpp  test_memory_context.cpp  test_narrowing.cpp  test_sign_change.cpp
tests/: CMakeLists.txt
tests/data/: sample.cpp
tests/unit/context/: ContextIntelligenceTests.cpp  EnhancedContextIntelligenceTests.cpp
tests/unit/discovery/: ConversionClassifierTests.cpp
tests/unit/impact/: ConversionImpactGraphTests.cpp
tests/unit/parsing/: ParsingServiceTests.cpp
tests/unit/risk/: RiskEngineSpecificationTests.cpp  RiskEngineTests.cpp
